--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,22 @@
 {
   "manifest_version": 2,
-  "name": "Quick Note-Taker",
+  "name": "Note Manager",
   "version": "1.0",
-  "description": "A simple Chrome extension for quick note-taking.",
-  "permissions": ["storage"],
+  "description": "A Chrome extension for managing notes.",
+  "permissions": [],
   "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
+    "default_popup": "welcome.html",
+    "default_icon": {
+      "16": "images/icon.png"
+    }
   },
   "icons": {
-    "48": "icon.png"
-  }
+    "16": "images/icon.png"
+  },
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
+  "content_scripts": [],
+  "web_accessible_resources": []
 }
-
