--- a/PageNotes Extension/Manifest.json
+++ b/PageNotes Extension/Manifest.json
@@ -3,14 +3,9 @@
     "name": "PageNotes",
     "version": "1.0",
     "description": "Take and save notes for different web pages",
-    "permissions": ["storage"],
+    "permissions": ["storage", "tabs"],
     "browser_action": {
         "default_popup": "popup.html",
-        "default_icon": {
-            "16": "icon16.jpg"
-        }
-    },
-    "icons": {
-        "16": "icon16.jpg"
+        "default_icon": "icon.png"
     }
 }
